--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-<<<<<<< HEAD
-=======
-            android:name=".RegistActivity"
+            android:name=".MatenextActivity"
             android:exported="false" />
         <activity
->>>>>>> 09a25cf (second commit)
             android:name=".MainActivity"
             android:exported="false" />
         <activity
