내정보추가하기, 메세지 주고받는 기능 xml레이아웃 완성하기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".View.me_btn_helper"
+            android:name=".ListMsgActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WaitActivty"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity0"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
